--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -177,7 +177,7 @@ We also show how the strain texture of the wall appears, and how more naive argu
 
 \subsection{Ginzburg-Landau-Devonshire model}
 The model that we use is based on the developments in Refs.~\cite{Zhirnov1959,L.N.Bulaevskii1963,Marton2010}.
-We chose for a continuum model because of the mesoscopic length scales that are involved with the problem.
+We chose a continuum model because of the mesoscopic length scales that are involved with the problem.
 One could argue that this simplification is detrimental for the description of the very sharp DWs.
 %, sporting a width on the order of a couple of unit cells (5 - 20 \AA) \cite{Zhirnov1959}.
 Especially to describe the movement of the DW it is necessary to take the Peierls-Nabarro barriers into account that exist due to the lattice structure.
@@ -197,7 +197,7 @@ The free energy density in terms of the primary OP for the ferroelectric polariz
 &&f_{q}= - q_{ijkl}\varepsilon_{ij}P_{k}P_{l},\\
 &&f_{fl}=\frac{1}{2}\Gamma_{ijkl}(\varepsilon_{ij}\partial_k P_l - P_k\partial_l\varepsilon_{ij}),
 \end{eqnarray}
-where all coefficients are positive, $\partial_i$ signify spatial derivatives, and the indices enumerate ${x,y,z}$ with an implied summation over repeated ones.
+where $\partial_i$ signify spatial derivatives, and the indices enumerate ${x,y,z}$ with an implied summation over repeated ones.
 The first term is the Landau free energy which describes the phase transition and formation of the ferroelectic polarization $P$.
 Both the second and fourth order coefficients $\alpha_{ij}$ and $\alpha_{ijkl}$ are temperature dependent, and switch sign at the phase transition temperature.
 This means that a sixth order term with $\alpha_{ijklmn}$ has to be included in order to bound $P$ below the transition temperature.
