--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -216,7 +216,7 @@ We utilize both theoretical and computational tools to understand the nature of 
 \Include{Cr}
 
 % \Include{Softening}
-\appendix
+% \appendix
 % \Include{DFT}
 % \Include{Wannier}
 % \Include{FEM}
